extended SchemaEditor
