# src/lib/schemaItemEditorMeta.ts
@@ -55,6 +55,16 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 				minUsage: 0,
 				maxUsage: 1,
 			},
+			{
+				kind: "field",
+				order: 4,
+				dataStructure: { itemName: "xpath", default: "" },
+				formProperties: { label: { und: "XPath", de: "XPath" } },
+				fieldType: "string",
+				itemFlags: { ...fieldFlags, nullable: true },
+				minUsage: 0,
+				maxUsage: 1,
+			},
 		],
 	},
 	{
@@ -102,6 +112,16 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 	{
 		kind: "field",
 		order: 4,
+		dataStructure: { itemName: "wizardType", default: "" },
+		formProperties: { label: { und: "Wizard type", de: "Wizard-Typ" } },
+		fieldType: "string",
+		itemFlags: { ...fieldFlags, nullable: true },
+		minUsage: 0,
+		maxUsage: 1,
+	},
+	{
+		kind: "field",
+		order: 5,
 		dataStructure: { itemName: "fieldType", default: "string" },
 		formProperties: { label: { und: "Field type", de: "Feldtyp" } },
 		fieldType: "string",
@@ -111,7 +131,7 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 5,
+		order: 6,
 		dataStructure: { itemName: "rules", default: "" },
 		formProperties: { label: { und: "Rules", de: "Regeln" } },
 		fieldType: "string",
@@ -121,7 +141,7 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 6,
+		order: 7,
 		dataStructure: { itemName: "example", default: "" },
 		formProperties: { label: { und: "Example", de: "Beispiel" } },
 		fieldType: "string",
@@ -131,7 +151,7 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "group",
-		order: 7,
+		order: 8,
 		dataStructure: { itemName: "itemFlags" },
 		formProperties: { label: { und: "Flags", de: "Flags" } },
 		itemFlags: { readonly: false, hidden: false },
@@ -173,7 +193,7 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 8,
+		order: 9,
 		dataStructure: { itemName: "minUsage", default: "0" },
 		formProperties: { label: { und: "Min usage", de: "Min. Verwendung" } },
 		fieldType: "number",
@@ -183,7 +203,7 @@ export const SCHEMA_FIELD_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 9,
+		order: 10,
 		dataStructure: { itemName: "maxUsage", default: "1" },
 		formProperties: { label: { und: "Max usage", de: "Max. Verwendung" } },
 		fieldType: "number",
@@ -223,6 +243,16 @@ export const SCHEMA_GROUP_ITEM_FORM_ITEMS = [
 				fieldType: "string",
 				itemFlags: fieldFlags,
 				minUsage: 1,
+				maxUsage: 1,
+			},
+			{
+				kind: "field",
+				order: 2,
+				dataStructure: { itemName: "xpath", default: "" },
+				formProperties: { label: { und: "XPath", de: "XPath" } },
+				fieldType: "string",
+				itemFlags: { ...fieldFlags, nullable: true },
+				minUsage: 0,
 				maxUsage: 1,
 			},
 		],
@@ -270,8 +300,18 @@ export const SCHEMA_GROUP_ITEM_FORM_ITEMS = [
 		],
 	},
 	{
-		kind: "group",
+		kind: "field",
 		order: 4,
+		dataStructure: { itemName: "wizardType", default: "" },
+		formProperties: { label: { und: "Wizard type", de: "Wizard-Typ" } },
+		fieldType: "string",
+		itemFlags: { ...fieldFlags, nullable: true },
+		minUsage: 0,
+		maxUsage: 1,
+	},
+	{
+		kind: "group",
+		order: 5,
 		dataStructure: { itemName: "itemFlags" },
 		formProperties: { label: { und: "Flags", de: "Flags" } },
 		itemFlags: { readonly: false, hidden: false },
@@ -303,7 +343,7 @@ export const SCHEMA_GROUP_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 5,
+		order: 6,
 		dataStructure: { itemName: "minUsage", default: "0" },
 		formProperties: { label: { und: "Min usage", de: "Min. Verwendung" } },
 		fieldType: "number",
@@ -313,7 +353,7 @@ export const SCHEMA_GROUP_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 6,
+		order: 7,
 		dataStructure: { itemName: "maxUsage", default: "1" },
 		formProperties: { label: { und: "Max usage", de: "Max. Verwendung" } },
 		fieldType: "number",
@@ -323,7 +363,7 @@ export const SCHEMA_GROUP_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "field",
-		order: 7,
+		order: 8,
 		dataStructure: { itemName: "collectionType", default: "map" },
 		formProperties: { label: { und: "Collection type", de: "Sammlungstyp" } },
 		fieldType: "string",
@@ -333,7 +373,7 @@ export const SCHEMA_GROUP_ITEM_FORM_ITEMS = [
 	},
 	{
 		kind: "group",
-		order: 8,
+		order: 9,
 		dataStructure: { itemName: "items" },
 		formProperties: { label: { und: "Items", de: "Felder und Gruppen" } },
 		itemFlags: { readonly: false, hidden: false },
